--- a/style.css
+++ b/style.css
@@ -3,33 +3,59 @@
     width: 1200px;
     
   }
-
-  @media all and (min-width: 992px) {
-    .navbar{ padding-top: 0; padding-bottom: 0; }
-    .navbar .has-megamenu{position:static!important;}
-    .navbar .megamenu{left:20%; right:0; width:1000px; padding:20px;  }
-    .navbar .nav-link{ padding-top:1rem; padding-bottom:1rem;  }
-  }
-  .row-striped:nth-of-type(odd){
-    background-color: #efefef;
-    border-left: 4px #000000 solid;
-  }
-  
-  .row-striped:nth-of-type(even){
-    background-color: #ffffff;
-    border-left: 4px #efefef solid;
-  }
-  
   .row-striped {
       padding: 15px 0;
   }
 
   a:link{
-    color: darkgreen;
+    color: green;
   }
   a{
-    color: darkgreen;
+    color: green;
   }
   .btn-link{
     color: black;
   }
+
+
+  .nav.navbar-nav li a {
+    color: black !important; 
+  }
+ 
+ .nav.navbar-nav a:hover {
+  color: green !important;
+ }
+
+a.amenu:link{
+  color: yellow;
+}
+
+div.submenu{
+  background-color: green;
+  color: rgb(233, 233, 6);;
+  height: 7rem;
+  width: 18rem;
+}
+div:hover.submenu a{
+  background-color: rgb(233, 233, 6);
+  color: green;
+ }
+ div:hover.submenu{
+  background-color: rgb(233, 233, 6);
+ }
+
+ .up{
+  text-transform: uppercase;
+ }
+ .verticalLine {
+  border-left: thick solid green;
+}
+.bg-green{
+  background-color: green;
+  height: 4rem;
+}
+
+.lfmenu{
+  text-align: center;
+  color: white;
+}
